# mumble-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  connection.rs  error.rs  lib.rs  options.rs  proto.rs
tests/: lib.rs
