[package]
name = "mumble"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]
description = "Headless mumble client"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mumble"]
repository = "https://github.com/DenialAdams/mumble-rs"

[dependencies]
byteorder = "0.5.3"
clippy = "*"
protobuf = "1.0.24"
rustls = "0.5.2"
webpki-roots = "0.5.0"
